src/objects/Personal_Need__c.object
<CustomObject>
    <fields>
        <fullName>Discount_on_PP__c</fullName>
        <label>Discount on PP (%)</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Finishing__c</fullName>
        <label>Finishing</label>
        <picklist>
            <picklistValues>
                <fullName>Crizal Forte UV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Crizal Easy UV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Crizal Sun UV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Optifog UV</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Glas_Type__c</fullName>
        <label>Glas Type</label>
        <picklist>
            <picklistValues>
                <fullName>Ideal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Varilux Comfort NE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Varilux E Design</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Personal Need</relationshipLabel>
        <relationshipName>Personal_Need</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Personal Need</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Name__c</columns>
        <columns>Glas_Type__c</columns>
        <columns>Finishing__c</columns>
        <columns>Discount_on_PP__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PN-{0000}</displayFormat>
        <label>PN-ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Personal Needs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>